--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
-﻿@using DotNetProject
+@using DotNetProject
+@using DotNetProject.Helpers
 @using DotNetProject.Models
+@using Microsoft.Extensions.Options
+@inject IOptions<DotNetProject.Services.FirebaseOptions> FirebaseOptions
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
